--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,183 @@
+-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+html,
+body {
+  line-height: 1.4;
+  font-weight: 300;
+  font-family: "Roboto", sans-serif;
+}
+
+.hero_section {
+  background-image: url(img/i3.jpg);
+  min-height: 100vh;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.text_hero{
+  color: rgb(255, 255, 255);
+  max-width: 900px;
+  margin: 0 auto;
+  padding-top: 54px;
+  padding-left: 16px;
+  font-family: 'Lato';
+}
+.text_hero h2 span {
+  font-size: 72px;
+  font-weight: 400;
+  margin-top:20px;
+}
+
+.text_hero h1{
+  font-size: 72px;
+  font-weight: 400;
+  margin-top:10px;
+}
+
+
+.black_box {
+  background-color: #000;
+  margin-top: 10px;
+  padding: 15px;
+  color: rgb(255, 255, 255);
+}
+.black_box h2 {
+  font-size: 80px;
+  text-align: center;
+  font-weight: 400;
+}
+
+.black_box h2 span {
+  font-weight: 400;
+  font-size: 96px;
+}
+
+
+.grid_parent {
+  display: grid;
+  gap: 10px;
+  grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+  max-width: 1100px;
+  margin: 50px auto;
+}
+.grid_item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.card {
+  max-width: 320px;
+  height: 400px;
+  border-radius: 15px;
+  box-shadow: 5px 5px 5px #aaaaaa;
+  transition: 0.5s ease-in-out;
+}
+.card:hover {
+  transform: scale(1.04);
+  box-shadow: 15px 15px 15px rgb(168, 147, 175);
+  transition: 0.5s ease-in-out;
+}
+.card_text {
+  padding: 10px;
+}
+.card_text h3 {
+  margin-bottom: 5px;
+}
+.bottom_section {
+  display: flex;
+  justify-content: space-between;
+  gap:25px;
+  
+}
+.contact_me {
+  background-color: rgb(82, 82, 78);
+}
+.about_me {
+  background-color: rgb(102, 36, 35);
+}
+
+.contact_me,
+.about_me {
+  min-height: 300px;
+  padding: 25px;
+  color: white;
+  margin:40px;
+}
+.about_me h1,
+.contact_me h1 {
+  font-size: 44px;
+  font-weight: 400;
+}
+.about_me p,
+.contact_me p {
+  margin-bottom: 20px;
+}
+
+
+@media (max-width: 786px) {
+
+
+  .grid_parent {
+  gap: 10px;
+  grid-template-columns:1fr;
+  margin: 50px auto;
+ }
+
+
+  
+
+
+  .hero_section {
+    min-height: 50vh;
+  }
+  .text_hero {
+    padding: 10px 0;
+    text-align: center;
+  }
+  .text_hero h2 span {
+    font-size: 32px;
+  }
+
+  .text_hero h1{
+    font-size: 32px;
+  }
+
+  .black_box h2 {
+    font-size: 24px;
+  }
+  .black_box h2 span {
+    font-weight: 400;
+    font-size: 32px;
+  }
+  .bottom_section {
+    flex-direction: column;
+    gap:10px;
+  }
+  h1 {
+    font-size: 32px;
+  }
+
+ .grid_parent{
+     gap:15px;
+  }
+
+  .about_me{
+     margin-top:10px;
+     margin_bottom:10px;
+  }
+
+.contact_me{
+     margin-top:10px;
+     margin_bottom:10px;
+   }
+
+  .about_me h1,
+  .contact_me h1 {
+    font-size: 32px;
+  }
+}
