--- a/styles.css
+++ b/styles.css
@@ -1,186 +1,464 @@
--@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+   /*text-transform: capitalize;*/
+    font-family: sans-serif;
+    transition: all 0.2s linear;
+    scroll-behavior: smooth;
+    transition: 1s;
 }
 
-html,
-body {
-  line-height: 1.4;
-  font-weight: 300;
-  font-family: "Roboto", sans-serif;
+:root{
+    --green: #3dfa0e;
 }
 
-.hero_section {
-  background-image: url(img/i3.jpg);
-  min-height: 100vh;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.text_hero{
-  color: rgb(255, 255, 255);
-  max-width: 900px;
-  margin: 0 auto;
-  padding-top: 54px;
-  padding-left: 16px;
-  font-family: 'Lato';
-}
-.text_hero h2 span {
-  font-size: 72px;
-  font-weight: 400;
-  margin-top:20px;
+::selection{
+    background: var(--green);
 }
 
-.text_hero h1{
-  font-size: 72px;
-  font-weight: 400;
-  margin-top:10px;
+html{
+    font-size: 62.5%;
+    overflow-x: hidden;
 }
 
-
-.black_box {
-  background-color: #000;
-  margin-top: 10px;
-  padding: 15px;
-  color: rgb(255, 255, 255);
-}
-.black_box h2 {
-  font-size: 80px;
-  text-align: center;
-  font-weight: 400;
+html::-webkit-scrollbar{
+    width: 1.4rem;
 }
 
-.black_box h2 span {
-  font-weight: 400;
-  font-size: 96px;
+html::-webkit-scrollbar-track{
+    background:white;
 }
 
-
-.grid_parent {
-  display: grid;
-  gap: 10px;
-  grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
-  max-width: 1100px;
-  margin: 50px auto;
-}
-.grid_item {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.card {
-  max-width: 320px;
-  height: 400px;
-  border-radius: 15px;
-  box-shadow: 5px 5px 5px #aaaaaa;
-  transition: 0.5s ease-in-out;
-}
-.card:hover {
-  transform: scale(1.04);
-  box-shadow: 15px 15px 15px rgb(168, 147, 175);
-  transition: 0.5s ease-in-out;
-}
-.card_text {
-  padding: 10px;
-}
-.card_text h3 {
-  margin-bottom: 5px;
-}
-.bottom_section {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  justify-content: space-between;
-  gap:25px;
-  
-}
-.contact_me {
-  background-color: rgb(82, 82, 78);
-  border-radius: 10px;
-}
-.about_me {
-  background-color: rgb(102, 36, 35);
-  border-radius: 10px;
+html::-webkit-scrollbar-thumb{
+    background: var(--green);
 }
 
-.contact_me,
-.about_me {
-  min-height: 300px;
-  padding: 25px;
-  color: white;
-  margin:40px;
+body{
+    background: #111;
+    overflow-x: hidden;
+    padding-left: 28rem;
+    scroll-behavior: smooth;
+    transition: 3s;
 }
-.about_me h1,
-.contact_me h1 {
-  font-size: 44px;
-  font-weight: 400;
+
+header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    height: 100%;
+    background: #1a1a1a;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: column;
+    padding: 25px;
+    width: 28rem;
+    text-align: center;
 }
-.about_me p,
-.contact_me p {
-  margin-bottom: 20px;
+
+header .user img{
+    height: 17rem;
+    width: 17rem;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 1rem;
+    border: 0.7rem solid var(--green);
+    
+}
+
+header .user .name{
+    font-size: 2rem;
+    color: #fff;
 }
 
 
-@media (max-width: 786px) {
+.post{
+    font-size: 1.5rem;
+    color: #eee;
+}
+
+header .navbar ul{
+    list-style: none;
+    padding: 2rem 0.5rem;
+}
 
 
-  .grid_parent {
-  gap: 10px;
-  grid-template-columns:1fr;
-  margin: 50px auto;
+header .navbar ul li a{
+  display: block;
+  padding: 1rem;
+  margin: 1.5rem 0;
+  background: #333;
+  color: #fff;
+  font-size: 2rem;
+  border-radius: 10rem;
+}
+
+header .navbar ul li a:hover{
+    background: #279834;
+    color: black;
+}
+
+
+#menu{
+    position: fixed;
+    top: 2rem;
+    right: 2rem;
+    background: #333;
+    color: #fff;
+    cursor: pointer;
+    font-size: 2.5rem;
+    z-index: 1000;
+    display: none;
+}
+
+
+#home{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: column;
+    padding: 0 15px;
+}
+
+.home h3{
+   font-size: 2.5rem;
+   color: white;
+   line-height: 100px;
+}
+
+.home h1{
+    font-size: 4rem;
+    color: #fff;
  }
 
 
-  
+ .home h1 span{
+    color: var(--green);
+ }
 
+ section{
+    padding: 5rem;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 1rem;
+ }
 
-  .hero_section {
-    min-height: 50vh;
-  }
-  .text_hero {
-    padding: 10px 0;
+ .home p{
+    font-size: 2rem;
+    color: #eee;
+    padding: 2rem;
+    /*overflow: hidden;*/
+    width: 80%;
+ }
+
+ .btn{
+       padding: 0.7rem 3rem;
+       background: #3333;
+       color: #fff;
+       cursor: pointer;
+       margin-top: 1rem;
+       border-radius: 5rem;
+ }
+
+ .btn:hover{
+    background-color: var(--green);
+    color: black;
+ }
+
+ .heading{
+    color: white;
     text-align: center;
-  }
-  .text_hero h2 span {
-    font-size: 32px;
+    margin: 0 6rem;
+    font-size: 4rem;
+    padding: 1rem;
+    border-radius: 0.1rem solid #fff4;
+ }
+
+
+.heading span{
+    color:var(--green);
+}
+
+.about .row{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem 0;
+}
+
+.about .row .info{
+    flex-direction: 1 1 48rem;
+    padding: 2rem 1rem;
+    padding: 6rem;
+}
+
+
+.about .row .info h3{
+    font-size: 2rem;
+    color: var(--green);
+    padding: 1rem 0;
+    font-weight: normal;
+}
+
+.about .row .info h3 span{
+    color: white;
+    padding: 0 0.5rem;
+}
+
+.about .row .container{
+    flex: 1 1 48rem;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+
+.about .row .container .box{
+   width: 20rem;
+   background: #2222;
+   text-align: center;
+   padding: 2rem;
+   margin: 2rem;
+}
+
+.about .row .container .box span{
+    font-size: 2rem;
+    color: var(--green);
+ }
+
+ .about .row .container .box h3{
+    font-size: 2rem;
+    color: #fff;
+ }
+
+
+ .education .box-container{
+        display: flex;
+        align-items: center;
+        justify-content: left;
+        flex-wrap: wrap;
+        padding: 1rem 0;
+        padding-left: 3rem;
+ }
+
+
+ .education .box-container .box{
+    width: 27rem;
+    margin: 4rem 1rem;
+    padding-left: 4rem;
+    border-left: 0.2rem solid #fff;
+    position: relative;
+}
+
+.education .box-container .box .s{
+    font-size: 1.3rem;
+    background: #222;
+    color: #fff;
+    border-radius: 5rem;
+    padding: 0.5rem 2.5rem;
+}
+
+
+.education .box-container .box h3{
+    font-size: 2rem;
+    color: #fff;
+    padding-left: 1.5rem;
+    margin: 20px;
+}
+
+.education .box-container .box p{
+    font-size: 1.4rem;
+    color: #eee;
+    padding: 1rem;
+}
+
+.s{
+    background: var(--green);
+}
+
+
+.portfolio .box-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 2rem 0;
+}
+
+.portfolio .box-container .box{
+    height: 20rem;
+    width: 26rem;
+    border-radius: 1rem;
+    margin: 2rem;
+    overflow: hidden;
+    cursor: pointer;
+   
+}
+
+
+
+.portfolio .box-container .box img{
+    width: 28rem;
+    height: 22rem;
+}
+
+
+.portfolio .box-container .box:hover img{
+    transform: scale(1.2);
+}
+
+
+.contact .row{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.contact .row .content{
+    flex: 1 1 30rem;
+    padding: 4rem;
+    padding-bottom: 0 ;
+}
+
+
+.contact .row form{
+    flex: 1 1 45rem;
+    padding: 2rem;
+    margin: 2rem;
+    margin-bottom: 4rem;
+}
+
+.contact .row form .box{
+    padding: 1rem;
+    margin: 1rem 0;
+    background: #3333;
+    color: #fff;
+    text-transform: none;
+    font-size: 1.7rem;
+    width: 100%;
+    outline: none;
+}
+
+
+.contact .row form .box::placeholder{
+  text-transform: capitalize; 
+}
+
+
+
+.contact .row form .message{
+   height: 15rem;
+   resize: none;  
   }
 
-  .text_hero h1{
-    font-size: 32px;
-  }
 
-  .black_box h2 {
-    font-size: 24px;
-  }
-  .black_box h2 span {
-    font-weight: 400;
-    font-size: 32px;
-  }
-  .bottom_section {
-    grid-template-columns:1fr;
-    gap:10px;
-  }
-  h1 {
-    font-size: 32px;
-  }
-
- .grid_parent{
-     gap:15px;
-  }
-
-  .about_me{
-     margin-top:10px;
-     margin_bottom:10px;
-  }
-
-.contact_me{
-     margin-top:10px;
-     margin_bottom:10px;
+.contact .row .content .title{
+     color: #fff;
+     font-size: 3rem;
+     padding-bottom: 2rem;
+       
    }
 
-  .about_me h1,
-  .contact_me h1 {
-    font-size: 32px;
+
+
+.contact .row .content .info h3{
+    display: flex;
+    align-items: center;
+    font-size:  2rem;
+    color: #eee;
+    padding: 1rem 0;
+    font-weight: normal;
   }
-}
+
+
+  
+.contact .row .content .info h3 i{
+    text-transform: none;
+    padding-right: 1rem;
+    color: var(--green);
+ }
+
+
+
+  @media (max-width: 1200px) {
+    
+    html{
+        font:55%;
+    }
+
+    .home{
+        padding: 1rem 4rem;
+    }
+  }
+
+
+  @media (max-width: 700px) {
+    html{
+        font-size: 50%;
+    }
+    
+     header{
+       left: -120%;*
+     }
+
+     #menu{
+        display: block;
+     }
+
+     header .toggle{
+        left: 0%;
+     }
+
+     body{
+        padding: 0%;
+     }
+  }
+
+
+
+  @media (max-width: 400px) {
+
+
+    .home p{
+        max-width: 500px;
+    }
+
+     header{
+        width: 100vw;
+        left: 0;
+     }
+
+     .heading{
+        margin: 0 3rem;
+     }
+
+     .about .row .container .box{
+         width: 100%
+     }
+
+
+     .education .box-container .box{
+        width: 100%;
+     }
+
+     .portfolio .box-container .box{
+        width: 100%;
+     }
+
+     .contact row form{
+        margin: 3rem;
+     }
+  }
+
+
+
